[package]
name = "lsmip"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpsparser = { path = "lib/mpsparser-rs" }
hprof = "0.1"
log = { version = "0.4", features = ["release_max_level_info"] }
ordered-float= "2.1"
itertools = "0.10"
pretty_env_logger = "0.4"
rand="0.8"
rand_xoshiro="0.6"
crossbeam = "0.8"
grb = "1.3"
which = "4.2"
structopt = "0.3"
